@@ -8,16 +8,17 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # 
-# RCS: @(#) $Id: base64.tcl,v 1.16 2003/02/25 06:38:57 davidw Exp $
+# RCS: @(#) $Id: base64.tcl,v 1.17 2003/04/11 19:16:19 andreas_kupries Exp $
 
 # Version 1.0   implemented Base64_Encode, Bae64_Decode
 # Version 2.0   uses the base64 namespace
 # Version 2.1   fixes various decode bugs and adds options to encode
 # Version 2.2   is much faster, Tcl8.0 compatible
 # Version 2.2.1 bugfixes
+# Version 2.2.2 bugfixes
 
 package require Tcl 8.2
-namespace eval base64 {
+namespace eval ::base64 {
     namespace export encode decode
 }
 
@@ -25,7 +26,7 @@ if {![catch {package require Trf 2.0}]} {
     # Trf is available, so implement the functionality provided here
     # in terms of calls to Trf for speed.
 
-    # base64::encode --
+    # ::base64::encode --
     #
     #	Base64 encode a given string.
     #
@@ -38,7 +39,7 @@ if {![catch {package require Trf 2.0}]} {
     #	A Base64 encoded version of $string, wrapped at $maxlen characters
     #	by $wrapchar.
     
-    proc base64::encode {args} {
+    proc ::base64::encode {args} {
 	# Set the default wrapchar and maximum line length to match the output
 	# of GNU uuencode 4.2.  Various RFC's allow for different wrapping 
 	# characters and wraplengths, so these may be overridden by command line
@@ -99,7 +100,7 @@ if {![catch {package require Trf 2.0}]} {
 	return $result
     }
 
-    # base64::decode --
+    # ::base64::decode --
     #
     #	Base64 decode a given string.
     #
@@ -110,7 +111,7 @@ if {![catch {package require Trf 2.0}]} {
     # Results:
     #	The decoded value.
 
-    proc base64::decode {string} {
+    proc ::base64::decode {string} {
 	::base64 -mode decode -- $string
     }
 
@@ -162,7 +163,7 @@ if {![catch {package require Trf 2.0}]} {
 	namespace export encode decode
     }
 
-    # base64::encode --
+    # ::base64::encode --
     #
     #	Base64 encode a given string.
     #
@@ -175,7 +176,7 @@ if {![catch {package require Trf 2.0}]} {
     #	A Base64 encoded version of $string, wrapped at $maxlen characters
     #	by $wrapchar.
     
-    proc base64::encode {args} {
+    proc ::base64::encode {args} {
 	set base64_en $::base64::base64_en
 	
 	# Set the default wrapchar and maximum line length to match the output
@@ -261,7 +262,7 @@ if {![catch {package require Trf 2.0}]} {
 	return $result
     }
 
-    # base64::decode --
+    # ::base64::decode --
     #
     #	Base64 decode a given string.
     #
@@ -272,7 +273,7 @@ if {![catch {package require Trf 2.0}]} {
     # Results:
     #	The decoded value.
 
-    proc base64::decode {string} {
+    proc ::base64::decode {string} {
 	if {[string length $string] == 0} {return ""}
 
 	set base64 $::base64::base64
@@ -318,5 +319,5 @@ if {![catch {package require Trf 2.0}]} {
     }
 }
 
-package provide base64 2.2.1
+package provide base64 2.2.2
 
