@@ -9,6 +9,6 @@
 # full path name of this file's directory.
 
 if {![package vsatisfies [package provide Tcl] 8.2]} {return}
-package ifneeded base64 2.2.1 [list source [file join $dir base64.tcl]]
-package ifneeded uuencode 1.0.1 [list source [file join $dir uuencode.tcl]]
-package ifneeded yencode 1.0.1 [list source [file join $dir yencode.tcl]]
+package ifneeded base64   2.2.2 [list source [file join $dir base64.tcl]]
+package ifneeded uuencode 1.0.2 [list source [file join $dir uuencode.tcl]]
+package ifneeded yencode  1.0.1 [list source [file join $dir yencode.tcl]]
