@@ -1,9 +1,9 @@
-[manpage_begin uuencode n 1.0.1]
+[manpage_begin uuencode n 1.0.2]
 [copyright {2002, Pat Thoyts}]
 [moddesc   {encode/decoding a binary file}]
 [titledesc {encode/decoding a binary file}]
 [require Tcl 8]
-[require uuencode [opt 1.0.1]]
+[require uuencode [opt 1.0.2]]
 [description]
 [para]
 
